# c.a.s.e.

./: README.md
.github/workflows/: rust.yml
case_files/: Cargo.toml
case_files/src/: config.rs  main.rs
case_files/src/handlers/: index_handler.rs  mod.rs  webhook_handler.rs
case_files/src/internal/: case.rs
case_files/src/models/: animation_model.rs  audio_model.rs  chat_model.rs  contact_model.rs  document_model.rs  file_model.rs  message_model.rs  mod.rs  photo_size_model.rs  sticker_model.rs  update_model.rs  user_model.rs  video_model.rs  video_note_model.rs  voice_model.rs
