[package]
name = "case_files"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1" }
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.29.1"
derive_more = "0.99.17"
serde_json = "1.0.99"
utility-types = "0.0.2"
reqwest = "0.11.18"
